--- a/gitlab-2.5.5-hotfix/charts/gitlab/charts/gitlab-grafana/templates/ingress.yaml
+++ b/gitlab-2.5.5-hotfix/charts/gitlab/charts/gitlab-grafana/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.global.grafana.enabled -}}
 {{- $gitlabHostname := include "gitlab.gitlab.hostname" . -}}
 {{- $tlsSecret := include "unicorn.tlsSecret" . -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}-grafana
@@ -25,8 +25,9 @@ spec:
       http:
         paths:
           - backend:
-              serviceName: {{ .Release.Name }}-grafana
-              servicePort: 80
+              service:
+                name: {{ .Release.Name }}-grafana
+                port: 80
             path: /-/grafana
   {{- if (and $tlsSecret (eq (include "gitlab.ingress.tls.enabled" $) "true" )) }}
   tls:
