--- a/gitlab-2.5.5-hotfix/charts/gitlab/charts/unicorn/templates/ingress.yaml
+++ b/gitlab-2.5.5-hotfix/charts/gitlab/charts/unicorn/templates/ingress.yaml
@@ -2,7 +2,7 @@
 {{- if eq (include "gitlab.ingress.enabled" $) "true" -}}
 {{- $gitlabHostname := include "gitlab.gitlab.hostname" . -}}
 {{- $tlsSecret := include "unicorn.tlsSecret" . -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io
 kind: Ingress
 metadata:
   name: {{ template "fullname" . }}
@@ -26,12 +26,14 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: {{ template "fullname" . }}
-              servicePort: {{ .Values.service.workhorseExternalPort }}
+              service:
+                name: {{ template "fullname" . }}
+                port: {{ .Values.service.workhorseExternalPort }}
           - path: /admin/sidekiq
             backend:
-              serviceName: {{ template "fullname" . }}
-              servicePort: {{ .Values.service.externalPort }}
+              service:
+                name: {{ template "fullname" . }}
+                port: {{ .Values.service.externalPort }}
   {{- if (and $tlsSecret (eq (include "gitlab.ingress.tls.enabled" $) "true" )) }}
   tls:
     - hosts:
