fix(2.5.5-hotfix): Ingress version (.port.number fix)

--- a/gitlab-2.5.5-hotfix/charts/gitlab/charts/gitlab-grafana/templates/ingress.yaml
+++ b/gitlab-2.5.5-hotfix/charts/gitlab/charts/gitlab-grafana/templates/ingress.yaml
@@ -27,7 +27,8 @@ spec:
           - backend:
               service:
                 name: {{ .Release.Name }}-grafana
-                port: 80
+                port:
+                  number: 80
             path: /-/grafana
   {{- if (and $tlsSecret (eq (include "gitlab.ingress.tls.enabled" $) "true" )) }}
   tls:
