--- a/gitlab-2.5.5-hotfix/charts/prometheus/templates/alertmanager-ingress.yaml
+++ b/gitlab-2.5.5-hotfix/charts/prometheus/templates/alertmanager-ingress.yaml
@@ -26,7 +26,8 @@ spec:
             backend:
               service:
                 name: {{ $serviceName }}
-                port: {{ $servicePort }}
+                port:
+                  number: {{ $servicePort }}
   {{- end -}}
 {{- if .Values.alertmanager.ingress.tls }}
   tls:
