--- a/gitlab-2.5.5-hotfix/charts/gitlab/charts/unicorn/templates/ingress.yaml
+++ b/gitlab-2.5.5-hotfix/charts/gitlab/charts/unicorn/templates/ingress.yaml
@@ -28,12 +28,14 @@ spec:
             backend:
               service:
                 name: {{ template "fullname" . }}
-                port: {{ .Values.service.workhorseExternalPort }}
+                port:
+                  number: {{ .Values.service.workhorseExternalPort }}
           - path: /admin/sidekiq
             backend:
               service:
                 name: {{ template "fullname" . }}
-                port: {{ .Values.service.externalPort }}
+                port:
+                  number: {{ .Values.service.externalPort }}
   {{- if (and $tlsSecret (eq (include "gitlab.ingress.tls.enabled" $) "true" )) }}
   tls:
     - hosts:
