--- a/gitlab-2.5.5-hotfix/charts/grafana/templates/ingress.yaml
+++ b/gitlab-2.5.5-hotfix/charts/grafana/templates/ingress.yaml
@@ -37,6 +37,7 @@ spec:
             backend:
               service:
                 name: {{ $fullName }}
-                port: {{ $servicePort }}
+                port:
+                  number: {{ $servicePort }}
   {{- end }}
 {{- end }}
