--- a/gitlab-2.5.5-hotfix/charts/prometheus/templates/pushgateway-ingress.yaml
+++ b/gitlab-2.5.5-hotfix/charts/prometheus/templates/pushgateway-ingress.yaml
@@ -23,7 +23,8 @@ spec:
             backend:
               service:
                 name: {{ $serviceName }}
-                port: {{ $servicePort }}
+                port:
+                  number: {{ $servicePort }}
   {{- end -}}
 {{- if .Values.pushgateway.ingress.tls }}
   tls:
