--- a/gitlab-2.5.5-hotfix/charts/prometheus/templates/server-ingress.yaml
+++ b/gitlab-2.5.5-hotfix/charts/prometheus/templates/server-ingress.yaml
@@ -27,7 +27,8 @@ spec:
             backend:
               service:
                 name: {{ $serviceName }}
-                port: {{ $servicePort }}
+                port:
+                  number: {{ $servicePort }}
   {{- end -}}
 {{- if .Values.server.ingress.tls }}
   tls:
