--- a/gitlab-2.5.5-hotfix/charts/prometheus/templates/alertmanager-ingress.yaml
+++ b/gitlab-2.5.5-hotfix/charts/prometheus/templates/alertmanager-ingress.yaml
@@ -2,7 +2,7 @@
 {{- $releaseName := .Release.Name -}}
 {{- $serviceName := include "prometheus.alertmanager.fullname" . }}
 {{- $servicePort := .Values.alertmanager.service.servicePort -}}
-apiVersion: networking.k8s.io
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
 {{- if .Values.alertmanager.ingress.annotations }}
@@ -23,6 +23,7 @@ spec:
       http:
         paths:
           - path: /{{ rest $url | join "/" }}
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: {{ $serviceName }}
