--- a/gitlab-2.5.5-hotfix/charts/gitlab/charts/gitlab-grafana/templates/ingress.yaml
+++ b/gitlab-2.5.5-hotfix/charts/gitlab/charts/gitlab-grafana/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.global.grafana.enabled -}}
 {{- $gitlabHostname := include "gitlab.gitlab.hostname" . -}}
 {{- $tlsSecret := include "unicorn.tlsSecret" . -}}
-apiVersion: networking.k8s.io
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}-grafana
@@ -30,6 +30,7 @@ spec:
                 port:
                   number: 80
             path: /-/grafana
+            pathType: ImplementationSpecific
   {{- if (and $tlsSecret (eq (include "gitlab.ingress.tls.enabled" $) "true" )) }}
   tls:
     - hosts:
