--- a/gitlab-2.5.5-hotfix/charts/grafana/templates/ingress.yaml
+++ b/gitlab-2.5.5-hotfix/charts/grafana/templates/ingress.yaml
@@ -3,7 +3,7 @@
 {{- $servicePort := .Values.service.port -}}
 {{- $ingressPath := .Values.ingress.path -}}
 {{- $extraPaths := .Values.ingress.extraPaths -}}
-apiVersion: networking.k8s.io
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -34,6 +34,7 @@ spec:
 {{ toYaml $extraPaths | indent 10 }}
 {{- end }}
           - path: {{ $ingressPath }}
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: {{ $fullName }}
