--- a/gitlab-2.6.0-hotfix/charts/gitlab/charts/gitlab-grafana/templates/ingress.yaml
+++ b/gitlab-2.6.0-hotfix/charts/gitlab/charts/gitlab-grafana/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.global.grafana.enabled -}}
 {{- $gitlabHostname := include "gitlab.gitlab.hostname" . -}}
 {{- $tlsSecret := include "unicorn.tlsSecret" . -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}-grafana
