--- a/gitlab-2.6.0-hotfix/charts/gitlab/charts/unicorn/templates/ingress.yaml
+++ b/gitlab-2.6.0-hotfix/charts/gitlab/charts/unicorn/templates/ingress.yaml
@@ -2,7 +2,7 @@
 {{- if eq (include "gitlab.ingress.enabled" $) "true" -}}
 {{- $gitlabHostname := include "gitlab.gitlab.hostname" . -}}
 {{- $tlsSecret := include "unicorn.tlsSecret" . -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ template "fullname" . }}
