--- a/gitlab-2.6.0-hotfix/charts/prometheus/templates/node-exporter-podsecuritypolicy.yaml
+++ b/gitlab-2.6.0-hotfix/charts/prometheus/templates/node-exporter-podsecuritypolicy.yaml
@@ -1,6 +1,6 @@
 {{- if and .Values.nodeExporter.enabled .Values.rbac.create }}
 {{- if .Values.nodeExporter.podSecurityPolicy.enabled }}
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: PodSecurityPolicy
 metadata:
   name: {{ template "prometheus.nodeExporter.fullname" . }}
