--- a/gitlab-2.6.0-hotfix/charts/grafana/templates/ingress.yaml
+++ b/gitlab-2.6.0-hotfix/charts/grafana/templates/ingress.yaml
@@ -34,6 +34,7 @@ spec:
 {{ toYaml $extraPaths | indent 10 }}
 {{- end }}
           - path: {{ $ingressPath }}
+            pathType: ImplementationSpecific
             backend:
               service
                 name: {{ $fullName }}
