--- a/gitlab-2.6.0-hotfix/charts/prometheus/templates/pushgateway-ingress.yaml
+++ b/gitlab-2.6.0-hotfix/charts/prometheus/templates/pushgateway-ingress.yaml
@@ -20,6 +20,7 @@ spec:
       http:
         paths:
           - path: /{{ rest $url | join "/" }}
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: {{ $serviceName }}
