--- a/gitlab-2.6.0-hotfix/charts/prometheus/templates/server-ingress.yaml
+++ b/gitlab-2.6.0-hotfix/charts/prometheus/templates/server-ingress.yaml
@@ -24,6 +24,7 @@ spec:
       http:
         paths:
           - path: /{{ rest $url | join "/" }}
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: {{ $serviceName }}
