--- a/gitlab-2.6.0-hotfix/charts/registry/templates/ingress.yaml
+++ b/gitlab-2.6.0-hotfix/charts/registry/templates/ingress.yaml
@@ -26,6 +26,7 @@ spec:
       http:
         paths:
           - path: /
+            pathType: ImplementationSpecific
             backend:
               service:
                   name: {{ template "fullname" . }}
