--- a/gitlab-3.1.6-hotfix/charts/grafana/templates/ingress.yaml
+++ b/gitlab-3.1.6-hotfix/charts/grafana/templates/ingress.yaml
@@ -34,8 +34,11 @@ spec:
 {{ toYaml $extraPaths | indent 10 }}
 {{- end }}
           - path: {{ $ingressPath }}
+            pathType: ImplementationSpecific
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $servicePort }}
+              service
+                name: {{ $fullName }}
+                port:
+                  number: {{ $servicePort }}
   {{- end }}
 {{- end }}
