--- a/gitlab-3.1.6-hotfix/charts/gitlab/charts/unicorn/templates/ingress.yaml
+++ b/gitlab-3.1.6-hotfix/charts/gitlab/charts/unicorn/templates/ingress.yaml
@@ -25,13 +25,19 @@ spec:
       http:
         paths:
           - path: /
+            pathType: ImplementationSpecific
             backend:
-              serviceName: {{ template "fullname" . }}
-              servicePort: {{ .Values.service.workhorseExternalPort }}
+              service:
+                name: {{ template "fullname" . }}
+                port:
+                  number: {{ .Values.service.workhorseExternalPort }}
           - path: /admin/sidekiq
+            pathType: ImplementationSpecific
             backend:
-              serviceName: {{ template "fullname" . }}
-              servicePort: {{ .Values.service.externalPort }}
+              service:
+                name: {{ template "fullname" . }}
+                port:
+                  number: {{ .Values.service.externalPort }}
   {{- if (and $tlsSecret (eq (include "gitlab.ingress.tls.enabled" $) "true" )) }}
   tls:
     - hosts:
