--- a/gitlab-3.1.6-hotfix/charts/prometheus/templates/alertmanager-ingress.yaml
+++ b/gitlab-3.1.6-hotfix/charts/prometheus/templates/alertmanager-ingress.yaml
@@ -27,9 +27,12 @@ spec:
 {{ toYaml $extraPaths | indent 10 }}
 {{- end }}
           - path: /{{ rest $url | join "/" }}
+            pathType: ImplementationSpecific
             backend:
-              serviceName: {{ $serviceName }}
-              servicePort: {{ $servicePort }}
+              service:
+                name: {{ $serviceName }}
+                port:
+                  number: {{ $servicePort }}
   {{- end -}}
 {{- if .Values.alertmanager.ingress.tls }}
   tls:
