--- a/gitlab-3.1.6-hotfix/charts/prometheus/templates/alertmanager-ingress.yaml
+++ b/gitlab-3.1.6-hotfix/charts/prometheus/templates/alertmanager-ingress.yaml
@@ -3,7 +3,7 @@
 {{- $serviceName := include "prometheus.alertmanager.fullname" . }}
 {{- $servicePort := .Values.alertmanager.service.servicePort -}}
 {{- $extraPaths := .Values.alertmanager.ingress.extraPaths -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
 {{- if .Values.alertmanager.ingress.annotations }}
