--- a/gitlab-3.1.6-hotfix/charts/prometheus/templates/server-ingress.yaml
+++ b/gitlab-3.1.6-hotfix/charts/prometheus/templates/server-ingress.yaml
@@ -4,7 +4,7 @@
 {{- $serviceName := include "prometheus.server.fullname" . }}
 {{- $servicePort := .Values.server.service.servicePort -}}
 {{- $extraPaths := .Values.server.ingress.extraPaths -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
 {{- if .Values.server.ingress.annotations }}
