--- a/gitlab-3.1.6-hotfix/charts/registry/templates/ingress.yaml
+++ b/gitlab-3.1.6-hotfix/charts/registry/templates/ingress.yaml
@@ -2,7 +2,7 @@
 {{- if eq (include "gitlab.ingress.enabled" $) "true" -}}
 {{- $hostname := include "registry.hostname" . -}}
 {{- $tlsSecret := include "registry.tlsSecret" . -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ template "fullname" . }}
