--- a/gitlab-4.12.13-hotfix/charts/grafana/templates/ingress.yaml
+++ b/gitlab-4.12.13-hotfix/charts/grafana/templates/ingress.yaml
@@ -3,7 +3,7 @@
 {{- $servicePort := .Values.service.port -}}
 {{- $ingressPath := .Values.ingress.path -}}
 {{- $extraPaths := .Values.ingress.extraPaths -}}
-apiVersion: networking.k8s.io/v1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -34,11 +34,8 @@ spec:
 {{ toYaml $extraPaths | indent 10 }}
 {{- end }}
           - path: {{ $ingressPath }}
-            pathType: ImplementationSpecific
             backend:
-              service:
-                name: {{ $fullName }}
-                port:
-                  number: {{ $servicePort }}
+              serviceName: {{ $fullName }}
+              servicePort: {{ $servicePort }}
   {{- end }}
 {{- end }}
